# Demian-Reframe-Engine

./: README.md  demo_user_scenario.cmd  demo_user_scenario.py  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/config/: llm.py  versions.py
app/domain/: distortions.py  risk.py  state_machine.py  templates.py
app/llm/: __init__.py  client.py  contracts.py  parser.py  prompts.py  renderer.py  risk_assist.py
app/persistence/: sqlite.py
app/schemas/: events.py  models.py
app/services/: llm_gateway.py  session_service.py
docs/: engine_spec.md  model_eval_plan.md  rule_catalog.md  validation_plan.md
eval/: __init__.py  adapter.py  compare_runs.py  list_baselines.py  loader.py  models.py  run_eval.py  scorer.py
eval/baselines/: baselines.json  models.py  registry.py
eval/datasets/: sample_gad_gold.jsonl  sample_gad_gold.manifest.json  sample_predictions.jsonl  synthetic_gad_dev_live_002.jsonl  synthetic_gad_dev_live_002.manifest.json  synthetic_gad_dev_live_002_reviewed.jsonl  synthetic_gad_dev_live_002_reviewed.manifest.json
eval/schemas/: eval_case.schema.json
eval/synthetic/: adapter.py  generate.py  io.py  models.py  prepare_review.py  promote.py  prompts.py  workflow.py
tests/: conftest.py  helpers.py
tests/api/: test_audit_api.py  test_contracts_api.py  test_eval_runner.py  test_llm_api.py  test_sessions_api.py  test_synthetic_runner.py
tests/live/: test_openai_live.py
tests/regression/: test_gold_phrases.py
tests/scenarios/: test_happy_path.py  test_interruptions.py  test_state_guards.py
(+56 files in other folders)
