[project]
name = "gad-cbt-engine"
version = "0.1.0"
description = "Rule-based CBT cognitive restructuring engine scaffold for adult GAD"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.8,<3.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
